--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
    <h1>Каталог</h1>
    <div class="container">
     <div class="card">
-        <img class="image" src="src/img/jeans.jpg" alt="">
+        <img class="image" src="jeans.jpg" alt="">
         <h2>Джинси</h2>
         <p>Сині джинси Палаццо</p>
     </div>
     <div class="card">
-        <img class="image" src="src/img/skirt.jpeg" alt="">
+        <img class="image" src="skirt.jpeg" alt="">
         <h2>Юбка</h2>
         <p>Чорна юбка з поясом</p>
     </div>
     <div class="card">
-        <img class="image" src="src/img/long.jpg" alt="">
+        <img class="image" src="long.jpg" alt="">
         <h2>Лонгслів</h2>
         <p>Сірий лонгслів</p>
     </div>
     <div class="card">
-        <img class="image" src="src/img/sport.jpeg" alt="">
+        <img class="image" src="sport.jpeg" alt="">
         <h2>Спортивний костюм</h2>
         <p>Класичний білий спортивний костюм</p>
     </div>
     <div class="card">
-        <img class="image" src="src/img/cardigan.jpg" alt="">
+        <img class="image" src="cardigan.jpg" alt="">
         <h2>Кардиган</h2>
         <p>Вязаний розовий кардиган</p>
     </div>
